<resources>
    <string name="app_name">Binary Converter</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>
    <string name="text_view">Text View</string>
    <string name="binaryActivity">Binary</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="octal">Octal</string>
    <string name="hex">Hex</string>
    <string name="octalActivity">Octal</string>
    <string name="hexActivity">Hex</string>
    <string name="letterActivity">String</string>
    <string name="string">Clear</string>
    <string name="clear">Clear</string>
    <string name="period">.</string>
    <string name="twoscomplement">Two\'s Complement</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
</resources>